<resources>
    <string name="app_name">wysLink</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_live">LIVE</string>
    <string name="ui_menu_search">Search</string>
    <string name="ui_menu_send">Send</string>
    <string name="ui_menu_add">Add</string>
    <string name="ui_menu_write_post">Write Post</string>
    <string name="ui_menu_delete">Delete</string>
    <string name="ui_menu_edit">Edit</string>
    <string name="ui_menu_quit">Quit</string>
    <string name="ui_menu_logout">Log Out</string>
    <string name="ui_menu_feedback">Feedback</string>
    <string name="ui_menu_about">About</string>
    <string name="ui_menu_share">Share</string>
    <string name="ui_menu_refresh">Refresh</string>
    <string name="ui_menu_capture_video">capture</string>
    <string name="ui_menu_show_qr_code">Show QR code(*)</string>
    <string name="video_list_item_img_description">description for video tab item img</string>
    <string name="photo_list_item_img_description">description for photo tab item img</string>
    <string name="title_activity_main_show">Shows</string>
    <string name="title_activity_main_me">Me</string>
    <string name="title_activity_main_show_photo">Post</string>
    <string name="title_activity_main_show_Video">Video</string>
    <string name="title_activity_register">Sign In</string>
    <string name="title_activity_account">Account</string>
    <string name="loading_video">Loading video</string>
    <string name="tab_default_string">To be continued…</string>
    <string name="title_activity_test_button">testButtonActivity</string>
    <string name="clear_cache_menu">Clear Cache</string>
    <string name="clear_cache_complete_toast">Cache has been cleared</string>
    <string name="imageView_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="new_user">New user?</string>
    <string name="prompt_new_post_title">title</string>
    <string name="prompt_new_post_desc">Share something…</string>
    <string name="prompt_new_post_menu_choose_from_photo">Share Photo</string>
    <string name="prompt_new_post_menu_take_a_photo">Take a Photo</string>
    <string name="prompt_new_post_button_submit">Submit</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="title_activity_choose_image">ChooseImageActivity</string>
    <string name="prompt_choose_image_preview">Preview</string>
    <string name="prompt_choose_image_done">Done</string>
    <string name="prompt_choose_image_cancel">Cancel</string>
    <string name="prompt_navigation_back">Back</string>
    <string name="prompt_new_post_popup_preview">Preview</string>
    <string name="prompt_new_post_popup_delete">Delete</string>
    <string name="prompt_new_post_popup_choose">Choose from Photos</string>
    <string name="prompt_new_post_popup_take">Take a Photo</string>
    <string name="prompt_new_post_popup_cancel">Cancel</string>
    <string name="prompt_new_post_number">0 / 140</string>
    <string name="prompt_dialog_text">To reduce network provider data charges, we strongly recommend you choosing resolution 640x480 when capturing videos and using Wi-Fi to upload.</string>
    <string name="prompt_dialog_check_text">Do not ask me again</string>
    <string name="is_up_to_date">is up to date</string>
    <string name="text_limit"> / 140</string>
    <string name="video_upload_url">http://206.190.133.140/videoupload.php</string>
    <string name="facebook_app_id">1050500904983170</string>
    <string name="facebook_app_name">wyslink.com</string>
    <string name="share_facebook">Facebook</string>
    <string name="share_twitter">Twitter</string>
    <string name="gcm_SenderId">181107137417</string>
    <string name="tab_main_me_title_private">Private</string>
    <string name="tab_main_me_title_public">Public</string>
    <string name="tab_main_me_title_showroom">Showroom</string>
    <string name="tab_main_me_description_private">Description for Private</string>
    <string name="tab_main_me_description_public">Description for Public</string>
    <string name="tab_main_me_description_showroom">Description for Showroom</string>
    <string name="share_type_showroom">msShow</string>
    <string name="share_type_video">video</string>
    <string name="test_video_url">http://206.190.133.140/VideoStorage/kiddove_gmail_com/1449593792775_D.mp4</string>
    <string name="title_activity_add_showroom">AddShowroomActivity</string>
    <string name="Label_Add_Showroom">Add a showroom</string>
    <string name="prompt_upload_title">Title</string>
    <string name="prompt_upload_title_hint">title of your video</string>
    <string name="prompt_upload_description">Description</string>
    <string name="prompt_upload_description_hint">description of your video</string>
    <string name="showroom_name_hint">Showroom Name</string>
    <string name="label_scan_qr_code">Scan QR Code</string>
    <string name="label_scan_qr_code_sub">Scan Showroom\'s QR Code</string>
    <string name="recommend_showrooms">Recommend Showrooms</string>
    <string name="recommend_showroom_sub">Recommend Showroom List</string>
    <string name="prompt_empty_showroom_name">Showroom name can not be empty.</string>
    <string name="label_recommend_showroom">Recommend</string>
    <string formatted="false" name="request_template_video"><![CDATA[http://206.190.141.88/generateVideolist.ashx?datetime=%s&id=%s&count=%d&direction=%s&eh=%s&user=%s]]></string>
    <string formatted="false" name="request_template_default_video"><![CDATA[http://206.190.141.88/generateVideolist.ashx?count=%d&user=%s&eh=%s]]></string>
    <string name="request_direction_before">before</string>
    <string name="request_direction_after">after</string>

</resources>
