<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_show_tab_item_add"
        android:icon="@drawable/ic_action_content_add"
        android:showAsAction="ifRoom"
        android:title="@string/ui_menu_add">
    </item>

    <item
        android:id="@+id/menu_show_tab_item_edit"
        android:icon="@drawable/ic_action_content_edit"
        android:showAsAction="never"
        android:title="@string/ui_menu_edit" />
    <item
        android:id="@+id/menu_show_tab_item_refresh"
        android:icon="@drawable/ic_action_autorenew"
        android:showAsAction="never"
        android:title="@string/ui_menu_refresh" />
    <item
        android:id="@+id/menu_show_tab_item_logout"
        android:icon="@drawable/ic_action_exit_to_app"
        android:showAsAction="never"
        android:title="@string/ui_menu_logout" />
    <item
        android:id="@+id/menu_show_tab_item_quit"
        android:showAsAction="never"
        android:title="@string/ui_menu_quit" />
</menu>