<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/video_menu_item_share"
        android:icon="@drawable/ic_action_social_share"
        android:showAsAction="ifRoom"
        android:title="@string/ui_menu_share">
        <menu>
            <item
                android:id="@+id/video_share_facebook"
                android:icon="@drawable/ic_action_ic_facebook"
                android:showAsAction="ifRoom|withText"
                android:title="@string/share_facebook" />
            <item
                android:id="@+id/video_share_twitter"
                android:icon="@drawable/ic_action_ic_twitter"
                android:showAsAction="withText|ifRoom"
                android:title="@string/share_twitter" />
        </menu>
    </item>
    <item
        android:id="@+id/video_menu_item_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="never"
        android:title="@string/ui_menu_search" />
    <item
        android:id="@+id/video_menu_item_show_qr_code"
        android:showAsAction="never"
        android:title="@string/ui_menu_show_qr_code" />
</menu>
