<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/video_menu_item_add_new_video"
        android:icon="@drawable/ic_action_content_add"
        android:showAsAction="ifRoom"
        android:title="@string/ui_menu_capture_video" />
    <item
        android:id="@+id/video_menu_item_share"
        android:icon="@drawable/ic_action_social_share"
        android:showAsAction="never"
        android:title="@string/ui_menu_share" />
    <item
        android:id="@+id/video_menu_item_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="never"
        android:title="@string/ui_menu_search" />
    <item
        android:id="@+id/video_menu_item_show_qr_code"
        android:showAsAction="never"
        android:title="@string/ui_menu_show_qr_code" />
</menu>
