<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.NewPostActivity">
    <item
        android:id="@+id/menu_new_post_choose_photo"
        android:icon="@drawable/ic_action_image_photo_library"
        android:showAsAction="ifRoom"
        android:title="@string/prompt_new_post_menu_choose_from_photo" />
    <item
        android:id="@+id/menu_new_post_take_photo"
        android:icon="@drawable/ic_action_image_photo_camera"
        android:showAsAction="never"
        android:title="@string/prompt_new_post_menu_take_a_photo" />
    <item
        android:id="@+id/menu_new_post_send"
        android:icon="@drawable/ic_action_content_send"
        android:showAsAction="never"
        android:title="@string/ui_menu_send" />
</menu>
