<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="2dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="2dp">

    <TextView
        android:id="@+id/hall_video_list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/hall_video_list_item_img"
        android:layout_toRightOf="@+id/hall_video_list_item_img"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/hello_world"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hall_video_list_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hall_video_list_item_title"
        android:layout_below="@+id/hall_video_list_item_title"
        android:maxLines="4"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/action_settings"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <com.kectech.android.wyslink.thirdparty.CacheBitmap.RecyclingImageView
        android:id="@+id/hall_video_list_item_img"
        android:layout_width="128dp"
        android:layout_height="80dp"
        android:contentDescription="@string/video_list_item_img_description"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/hall_video_list_item_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hall_video_list_item_img"
        android:layout_alignRight="@+id/hall_video_list_item_img"
        android:layout_margin="1dp"
        android:background="@color/ColorPrimaryDark"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/label_live"
        android:textColor="@android:color/white"
        android:textSize="10sp" />
</RelativeLayout>