<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="2dp">

    <TextView
        android:id="@+id/me_list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/me_list_item_img"
        android:layout_toRightOf="@+id/me_list_item_img"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/hello_world"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/me_list_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/me_list_item_title"
        android:layout_below="@+id/me_list_item_title"
        android:layout_marginTop="2dp"
        android:maxLines="4"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/action_settings"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/me_list_item_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/video_list_item_img_description"
        android:scaleType="fitXY"
        android:src="@drawable/ic_av_videocam_blue" />

</RelativeLayout>