<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="2dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="2dp">

    <TextView
        android:id="@+id/show_photo_list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/show_photo_list_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_photo_list_item_title"
        android:maxLines="4"
        android:text="@string/action_settings"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/show_photo_list_item_layout0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_photo_list_item_desc"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="2dp">

        <ImageView
            android:id="@+id/show_photo_list_item_img0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/PhotoBackground"
            android:contentDescription="@string/photo_list_item_img_description"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/show_photo_list_item_img1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/PhotoBackground"
            android:contentDescription="@string/photo_list_item_img_description"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/show_photo_list_item_img2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/PhotoBackground"
            android:contentDescription="@string/photo_list_item_img_description"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_photo_list_item_layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_photo_list_item_layout0"
        android:orientation="horizontal"
        android:paddingBottom="2dp">

        <ImageView
            android:id="@+id/show_photo_list_item_img3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/PhotoBackground"
            android:contentDescription="@string/photo_list_item_img_description"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/show_photo_list_item_img4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/PhotoBackground"
            android:contentDescription="@string/photo_list_item_img_description"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/show_photo_list_item_img5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/PhotoBackground"
            android:contentDescription="@string/photo_list_item_img_description"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_photo_list_item_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_photo_list_item_layout1"
        android:orientation="horizontal"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/show_photo_list_item_img6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/PhotoBackground"
            android:contentDescription="@string/photo_list_item_img_description"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/show_photo_list_item_img7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/PhotoBackground"
            android:contentDescription="@string/photo_list_item_img_description"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/show_photo_list_item_img8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/PhotoBackground"
            android:contentDescription="@string/photo_list_item_img_description"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>